--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
         <h2>Python Free Class Registration</h2>
         <p>Fill the form below to join our Python class starting from <b>6th February</b>!</p>
-        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <form action="https://formspree.io/f/mnnjdryq" method="POST">
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="email" name="email" placeholder="Email Address" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
@@ -60,7 +60,7 @@
         </form>
         <div class="links">
             <h3>Join Our Community</h3>
-            <a href="https://whatsapp.com/channel/0029VazXUQz11ulXooEdtV0r" target="_blank">📌 Join WhatsApp Channel</a>
+            <a href="https://chat.whatsapp.com/FQdPsninRxpHAadxkJ4Qii" target="_blank">📌 Join WhatsApp Channel</a>
             <a href="https://t.me/code_wale" target="_blank">📌 Join Telegram Group</a>
             <a href="https://youtube.com/@code_wale?si=daQMQVbGCsbTZ10e" target="_blank">📌 Subscribe on YouTube</a>
         </div>
